@@ -211,7 +211,7 @@ class ApiQueryRevisions extends ApiQueryBase {
 			'limit' => array (
 				ApiBase :: PARAM_TYPE => 'limit',
 				ApiBase :: PARAM_MIN => 1,
-				ApiBase :: PARAM_MAX1 => ApiBase :: LIMIT_SML1,
+				ApiBase :: PARAM_MAX => ApiBase :: LIMIT_SML1,
 				ApiBase :: PARAM_MAX2 => ApiBase :: LIMIT_SML2
 			),
 			'startid' => array (
